compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__using_private_unqualified_type_alias.snap
---
source: compiler-core/src/type_/tests/imports.rs
assertion_line: 91
expression: "import one.{X}\n\npub fn main() {\n  X\n}"
---
error: Unknown module field
  ┌─ /src/one/two.gleam:1:13
  │
1 │ import one.{X}
  │             ^

The module `one` does not have a `X` field.

